--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="../build/bundle.js"></script>
+    <script src="../build/main.js"></script>
   </body>
 </html>
